# AutoBot

./: cert.pem  chatbot.py  context.txt  gmail.py  key.pem  langchainagent.py  localvoiceexecutor.py  pyproject.toml  requirements.txt  sample.json  sample.srt  sample.tsv  sample.txt  sample.vtt  selfDiscover.py  server.py  tmpgttewf38.json  tmpgttewf38.srt  tmpgttewf38.tsv  tmpgttewf38.txt  tmpgttewf38.vtt  todoist.py  useroutput.json  useroutput.srt  useroutput.tsv  useroutput.txt  useroutput.vtt  voice2txt.py
old/: chatbot.py  context.txt  langchainagent.py
templates/: Untitled-1  index.html  index.htmlold
todoist-tasks/: README.md  package.json
todoist-tasks/src/: fetchTasksDueToday.js
